Auto detecting package archive and publishing.

--- a/tools/eslint-plugin-azure-sdk/ci.yml
+++ b/tools/eslint-plugin-azure-sdk/ci.yml
@@ -58,6 +58,7 @@ stages:
             displayName: "Audit package"
 
           - publish: $(Build.ArtifactStagingDirectory)
+            displayName: Publishing package to run artifacts
             artifact: packages
             condition: succeededOrFailed()
 
@@ -75,10 +76,16 @@ stages:
           runOnce:
             deploy:
               steps:
+                - script: |
+                    export DETECTED_PACKAGE_NAME=`ls $(Pipeline.Workspace/packages/*.tgz`
+                    echo "##vso[task.setvariable variable=Package.Archive]$DETECTED_PACKAGE_NAME"
+                  displayName: Detecting package archive
+
                 - task: Npm@1
+                  displayName: Publishing package
                   inputs:
                     command: 'custom'
                     workingDir: '$(Pipeline.Workspace)/packages'
-                    customCommand: 'publish'
+                    customCommand: 'publish $(Package.Archive)'
                     customRegistry: 'useFeed'
                     customFeed: '7a8a7255-a1aa-48df-a904-c77c0b78cb03'
