--- a/tools/eslint-plugin-azure-sdk/ci.yml
+++ b/tools/eslint-plugin-azure-sdk/ci.yml
@@ -58,7 +58,7 @@ stages:
             displayName: "Audit package"
 
           - publish: $(Build.ArtifactStagingDirectory)
-            displayName: Publishing package to run artifacts
+            displayName: Publish package to run artifacts
             artifact: packages
             condition: succeededOrFailed()
 
@@ -77,12 +77,12 @@ stages:
             deploy:
               steps:
                 - script: |
-                    export DETECTED_PACKAGE_NAME=`ls $(Pipeline.Workspace/packages/*.tgz`
+                    export DETECTED_PACKAGE_NAME=`ls $(Pipeline.Workspace)/packages/*.tgz`
                     echo "##vso[task.setvariable variable=Package.Archive]$DETECTED_PACKAGE_NAME"
                   displayName: Detecting package archive
 
                 - task: Npm@1
-                  displayName: Publishing package
+                  displayName: Publish package to feed
                   inputs:
                     command: 'custom'
                     workingDir: '$(Pipeline.Workspace)/packages'
