--- a/tools/pipeline-generator/ci.yml
+++ b/tools/pipeline-generator/ci.yml
@@ -20,36 +20,7 @@ pr:
     include:
       - tools/pipeline-generator
 
-variables:
-  skipComponentGovernanceDetection: true
-
 stages:
-  - stage: Build
-    jobs:
-      - job: Build
-
-        pool:
-          vmImage: ubuntu-16.04
-
-        steps:
-          - script: |
-              echo "Pretend I'm building a package!"
-            workingDirectory: tools/eslint-plugin-azure-sdk
-            displayName: "Build, test and package"
-
-  - stage: Release
-    dependsOn: Build
-    condition: and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-    jobs:
-      - deployment: PublishPackage
-        environment: azure-sdk
-        
-        pool:
-          vmImage: ubuntu-16.04
-
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - script: |
-                    echo "Pretend I'm publishing a package!"
+  - template: ../../eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+    parameters:
+      ToolDirectory: pipeline-generator
