--- a/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
@@ -24,7 +24,7 @@ stages:
         condition: succeededOrFailed()
 - stage: Release
   dependsOn: Build
-  condition: and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  condition: and(ne(variables['Build.Reason'], 'PullRequest'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq(variables['Build.SourceBranch'], 'refs/heads/feature/get-publishing-working')))
   jobs:
   - deployment: PublishPackage
     environment: azure-sdk
@@ -34,5 +34,9 @@ stages:
       runOnce:
         deploy:
           steps:
-          - script: |
-              echo "Pretend I'm publishing a package!"
+          - task: NuGetCommand@2
+            inputs:
+              command: 'push'
+              packagesToPush: '$(Pipeline.Workspace)/packages/**/*.nupkg'
+              nuGetFeedType: 'internal'
+              publishVstsFeed: '29ec6040-b234-4e31-b139-33dc4287b756/8bea7e97-84ed-4421-9a37-2bbf3200662b'
