--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Tests/CI.BuildTasks.Tests/Tests.CI.BuildTasks.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Tests/CI.BuildTasks.Tests/Tests.CI.BuildTasks.csproj
@@ -4,9 +4,12 @@
     <Description>Tests for MS.Az.NetSdk.Build.Tasks msbuild build tasks tests</Description>
     <AssemblyTitle>MS.Az.NetSdk.Build.Tasks Tests</AssemblyTitle>
     <AssemblyName>Build.Tasks.Tests</AssemblyName>
-  </PropertyGroup>  
+
+    <!-- Skip test projects until tests can be fixed -->
+    <IsTestProject>false</IsTestProject>
+  </PropertyGroup>
   <PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<TargetFrameworks>netcoreapp2.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
 	</PropertyGroup>
   <ItemGroup>
@@ -19,6 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Mgmt.CI.BuildTasks\MS.Az.Mgmt.CI.BuildTasks.csproj" />
     <ProjectReference Include="..\..\..\CI.Common\Tests\Tests.CI.Common.csproj" />
-    <ProjectReference Include="..\..\..\CI.Common\Mgmt.CI.Common\MS.Az.Mgmt.CI.Common.csproj" />    
+    <ProjectReference Include="..\..\..\CI.Common\Mgmt.CI.Common\MS.Az.Mgmt.CI.Common.csproj" />
   </ItemGroup>
 </Project>
