Add more rules to eslint-plugin-azure-sdk (#72)
* add contributors

* change package name

* change version

* forgot to add '-sdk' to one instance of plugin name

* add typescript-specific linting rules (for this repo)

* change snake_case to camelCase

* remove unnecessary identifiers

* remove explicit anys unless necessary

* add lint to prepare script

* fix ts-config-lib to want empty array instead of being not used at all

* change version and make typescript a dev/peer dependency

* move imported .gitignore to repo base .gitignore

* add package lock

* update descriptions

* add tests verifying plugin structure

* cleanup

* test using compiled JS instead of TS

* use same directory for tests and final dist

* restructure scripts

* update package-lock.json

* add ts-modules-no-default

* change filename checking to occur at highest level possible for least repetitions

* remove filename param from package.json rules

* add ts-modules-no-default tests

* fix ts-modules-no-default

* change ts-modules-no-default to ts-modules-named-only (need to add more checks

* forgot file

* clean up ts-modules-only-named

* change report node locations to better describe error sources

* add ts-error-handling rule

* use @types/node for path module declaration instead of separate file

* add ts-error-handling tests

* ts-error-handling-coercion placeholder

* restructure scripts

* remove npm hooks

* add ts-include-original-source rule

* clean up loop syntax

* add ts-include-original-source tests and fix rule

* forgot to add new file in previous commit

* clean up lint warnings

* remove redundant files from package.json files array

* add ts-package-json-files-required rule

* add comments explaining regex

* combine ts-include-original-source into ts-package-json-files-required

* remove ts-error-handling-coercion (will be added in a different pr)

* fix ts-package-json-files

--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.0.0",
+  "version": "1.1.0-preview.1",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -20,7 +20,7 @@
     }
   ],
   "license": "MIT",
-  "homepage": "https://github.com/Azure/azure-sdk-tools/tools/eslint-plugin-azure-sdk",
+  "homepage": "https://github.com/Azure/azure-sdk-tools/tree/master/tools/eslint-plugin-azure-sdk",
   "repository": {
     "type": "git",
     "url": "https://github.com/Azure/azure-sdk-tools.git",
@@ -31,36 +31,43 @@
   },
   "main": "dist/index.js",
   "files": [
-    "dist",
-    "docs"
+    "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run format && tsc -p tsconfig.build.json",
+    "build": "npm run clean && tsc -p tsconfig.build.json && npm run format:dist",
     "clean": "rimraf dist/",
     "format": "prettier --write \"./**/*.{ts,json,md}\"",
-    "lint": "eslint src tests --ext .ts",
+    "format:check": "prettier --check \"./**/*.{ts,json,md}\"",
+    "format:dist": "prettier --write dist/**/*.{js,json,md}",
+    "lint": "eslint src tests --ext .ts && markdownlint README.md docs",
     "test": "npm run clean && tsc -p tsconfig.json && mocha --timeout 10000 --recursive dist/tests"
   },
-  "dependencies": {},
+  "dependencies": {
+    "path": "^0.12.7",
+    "typescript": "^3.4.5"
+  },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/chai": "^4.1.7",
     "@types/eslint": "^4.16.6",
     "@types/estree": "0.0.39",
     "@types/mocha": "^5.2.7",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/experimental-utils": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "@typescript-eslint/typescript-estree": "^1.12.0",
+    "bluebird": "^3.5.5",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
+    "markdownlint-cli": "^0.17.0",
     "mocha": "^6.1.4",
-    "prettier": "^1.18.2",
-    "typescript": "^3.4.5"
+    "prettier": "^1.18.2"
   },
   "peerDependencies": {
     "@typescript-eslint/parser": "^1.10.2",
-    "eslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "eslint": "^5.16.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=8.0.0"
   }
 }
