--- a/tools/eslint-plugin-azure-sdk/.eslintrc.json
+++ b/tools/eslint-plugin-azure-sdk/.eslintrc.json
@@ -4,7 +4,11 @@
     "es6": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -17,6 +21,7 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/indent": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "indent": "off",
     "no-useless-escape": "off"
   }
