--- a/tools/eslint-plugin-azure-sdk/ci.yml
+++ b/tools/eslint-plugin-azure-sdk/ci.yml
@@ -41,9 +41,9 @@ stages:
           - script: |
               set -e
               npm install
-              npm run build
-              npm test
+              npm run format:check
               npm run lint
+              npm test
               npm run build
               npm pack
               cp *.tgz $(Build.ArtifactStagingDirectory)
