--- a/.azure-pipelines/dotnet.yml
+++ b/.azure-pipelines/dotnet.yml
@@ -5,61 +5,72 @@
 trigger:
   - master
 
+resources:
+  repositories:
+    - repository: azure-sdk-build-tools
+      type: git
+      name: internal/azure-sdk-build-tools
+
 variables:
   DotNetCoreVersion: '2.1.503'
 
-jobs:
-  - job: 'Build'
+stages:
+  - stage: 'Build_and_Test'
+    jobs:
+      - job: 'Build'
 
-    pool:
-      vmImage: 'vs2017-win2016'
+        pool:
+          vmImage: 'vs2017-win2016'
 
-    steps:
-      - task: DotNetCoreInstaller@0
-        displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
-        inputs:
-          version: '$(DotNetCoreVersion)'
+        steps:
+          - task: DotNetCoreInstaller@0
+            displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
+            inputs:
+              version: '$(DotNetCoreVersion)'
 
-      - script: 'dotnet pack $(ProjectFile) -o $(Build.ArtifactStagingDirectory) -warnaserror $(VersioningProps)'
-        displayName: 'Build and Package'
-        env:
-          DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-          DOTNET_CLI_TELEMETRY_OPTOUT: 1
-          DOTNET_MULTILEVEL_LOOKUP: 0
+          - script: 'dotnet pack $(ProjectFile) -o $(Build.ArtifactStagingDirectory) -warnaserror $(VersioningProps)'
+            displayName: 'Build and Package'
+            env:
+              DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+              DOTNET_CLI_TELEMETRY_OPTOUT: 1
+              DOTNET_MULTILEVEL_LOOKUP: 0
 
-      - task: PublishBuildArtifacts@1
-        condition: succeededOrFailed()
-        displayName: 'Publish Artifacts'
-        inputs:
-          ArtifactName: packages
+          - task: PublishBuildArtifacts@1
+            condition: succeededOrFailed()
+            displayName: 'Publish Artifacts'
+            inputs:
+              ArtifactName: packages
 
-  - job: 'Test'
+      - job: 'Test'
 
-    pool:
-      vmImage: 'vs2017-win2016'
+        pool:
+          vmImage: 'vs2017-win2016'
 
-    steps:
-      - task: DotNetCoreInstaller@0
-        displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
-        inputs:
-          version: '$(DotNetCoreVersion)'
+        steps:
+          - task: DotNetCoreInstaller@0
+            displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
+            inputs:
+              version: '$(DotNetCoreVersion)'
 
-      - task: DotNetCoreCLI@2
-        displayName: 'Build & Test'
-        env:
-          DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-          DOTNET_CLI_TELEMETRY_OPTOUT: 1
-          DOTNET_MULTILEVEL_LOOKUP: 0
-        inputs:
-          command: test
-          projects: '$(ProjectFile)'
-          arguments: --logger trx
-          publishTestResults: false
+          - task: DotNetCoreCLI@2
+            displayName: 'Build & Test'
+            env:
+              DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+              DOTNET_CLI_TELEMETRY_OPTOUT: 1
+              DOTNET_MULTILEVEL_LOOKUP: 0
+            inputs:
+              command: test
+              projects: '$(ProjectFile)'
+              arguments: --logger trx
+              publishTestResults: false
 
-      - task: PublishTestResults@2
-        condition: succeededOrFailed()
-        inputs:
-          testResultsFiles: '**/*.trx'
-          testRunTitle: 'Windows DotNet $(DotNetCoreVersion)'
-          testResultsFormat: 'VSTest'
-          mergeTestResults: true
+          - task: PublishTestResults@2
+            condition: succeededOrFailed()
+            inputs:
+              testResultsFiles: '**/*.trx'
+              testRunTitle: 'Windows DotNet $(DotNetCoreVersion)'
+              testResultsFormat: 'VSTest'
+              mergeTestResults: true
+
+  - ${{ if ne(variables['System.TeamProject'], 'Public') }}:
+    - template: pipelines/stages/net-release-blobfeed.yml@azure-sdk-build-tools
