--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.1.0-preview.4",
+  "version": "1.1.0-preview.5",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -43,6 +43,7 @@
     "test": "npm run clean && tsc -p tsconfig.json && mocha --timeout 10000 --recursive dist/tests"
   },
   "dependencies": {
+    "glob": "^7.1.4",
     "path": "^0.12.7",
     "typescript": "^3.4.5"
   },
@@ -51,6 +52,7 @@
     "@types/chai": "^4.1.7",
     "@types/eslint": "^4.16.6",
     "@types/estree": "0.0.39",
+    "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/experimental-utils": "^1.12.0",
