--- a/tools/eslint-plugin-azure-sdk/tsconfig.build.json
+++ b/tools/eslint-plugin-azure-sdk/tsconfig.build.json
@@ -1,8 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["tests"],
-  "compilerOptions": {
-    "types": []
-  },
-  "outDir": "./dist"
+  "include": ["src"]
 }
