--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.1.0-preview.5",
+  "version": "1.1.0",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -54,6 +54,7 @@
     "@types/estree": "0.0.39",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.8",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/experimental-utils": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
