--- a/tools/eslint-plugin-azure-sdk/tsconfig.json
+++ b/tools/eslint-plugin-azure-sdk/tsconfig.json
@@ -14,7 +14,7 @@
     "removeComments": true,
     "strict": true,
     "target": "es2016",
-    "types": ["chai", "eslint", "estree", "mocha"]
+    "types": ["node"]
   },
-  "exclude": ["node_modules"]
+  "include": ["src", "tests"]
 }
