Code style revisions (#115)
* remove inline && ifs and start on simplifying arrow functions

* simplify arrow function syntax

* add eslint rules and enforce compliance

* fix errors

* add typescript-eslint rules

--- a/tools/eslint-plugin-azure-sdk/.eslintrc.json
+++ b/tools/eslint-plugin-azure-sdk/.eslintrc.json
@@ -21,8 +21,17 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/indent": "off",
+    "@typescript-eslint/no-magic-numbers": ["error", { "ignore": [0] }],
     "@typescript-eslint/no-explicit-any": "off",
-    "indent": "off",
-    "no-useless-escape": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "arrow-body-style": ["error", "as-needed"],
+    "curly": "error",
+    "eqeqeq": "error",
+    "no-duplicate-imports": "error",
+    "no-else-return": "error",
+    "no-multi-spaces": "error",
+    "no-redeclare": "error",
+    "no-useless-escape": "off",
+    "prefer-template": "error"
   }
 }
