--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.1.1",
+  "version": "1.2.0-preview.1",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -34,11 +34,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && tsc -p tsconfig.build.json && npm run format:dist",
+    "build": "npm run clean && tsc -p tsconfig.build.json && prettier --write dist/**/*.{js,json,md}",
     "clean": "rimraf dist/",
     "format": "prettier --write \"./**/*.{ts,json,md}\"",
     "format:check": "prettier --check \"./**/*.{ts,json,md}\"",
-    "format:dist": "prettier --write dist/**/*.{js,json,md}",
     "lint": "eslint src tests --ext .ts && markdownlint README.md docs",
     "test": "npm run clean && tsc -p tsconfig.json && mocha --timeout 10000 --recursive dist/tests"
   },
@@ -53,7 +52,7 @@
     "@types/estree": "0.0.39",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.6.9",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/experimental-utils": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
