Add more specific copyright header fixes (#140)
* remove unnecessary type coercion

* bump package version

* check individual lines

* move @types/fast-levenshtein to devDependencies

* bump types packages and fix errors

* bump @typescript-eslint dependencies to 1.13.0

* format

--- a/tools/eslint-plugin-azure-sdk/.eslintrc.json
+++ b/tools/eslint-plugin-azure-sdk/.eslintrc.json
@@ -27,6 +27,7 @@
     "arrow-body-style": ["error", "as-needed"],
     "curly": "error",
     "eqeqeq": "error",
+    "no-console": "error",
     "no-duplicate-imports": "error",
     "no-else-return": "error",
     "no-multi-spaces": "error",
