--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.3.0-preview.4",
+  "version": "1.3.0-preview.5",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -42,21 +42,23 @@
     "test": "npm run clean && tsc -p tsconfig.json && mocha --timeout 10000 --recursive dist/tests"
   },
   "dependencies": {
+    "fast-levenshtein": "^2.0.6",
     "glob": "^7.1.4",
     "typescript": "^3.4.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
-    "@types/chai": "^4.1.7",
-    "@types/eslint": "^4.16.6",
+    "@types/chai": "^4.2.0",
+    "@types/eslint": "^4.16.8",
     "@types/estree": "0.0.39",
+    "@types/fast-levenshtein": "0.0.1",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.6.9",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/experimental-utils": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "@typescript-eslint/typescript-estree": "^1.12.0",
+    "@types/node": "^12.7.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/experimental-utils": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/typescript-estree": "^1.13.0",
     "bluebird": "^3.5.5",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
