--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/eslint-plugin-azure-sdk",
-  "version": "1.3.0",
+  "version": "2.0.0-preview.1",
   "description": "An ESLint plugin enforcing design guidelines for the JavaScript/TypeScript Azure SDK",
   "keywords": [
     "eslint",
@@ -54,21 +54,21 @@
     "@types/fast-levenshtein": "0.0.1",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.1",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/experimental-utils": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "@typescript-eslint/typescript-estree": "^1.13.0",
+    "@types/node": "^12.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/experimental-utils": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/typescript-estree": "^2.0.0",
     "bluebird": "^3.5.5",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
     "markdownlint-cli": "^0.17.0",
     "mocha": "^6.2.0",
     "prettier": "^1.18.2"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.16.0"
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
