--- a/src/dotnet/APIView/APIView/APIView.csproj
+++ b/src/dotnet/APIView/APIView/APIView.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Azure.ClientSdk.Analyzers\Azure.ClientSdk.Analyzers\Azure.ClientSdk.Analyzers.csproj" />
+  </ItemGroup>
+
 </Project>
