Unified pipeline convention (#165)
Support for unified pipelines + refactoring.

--- a/tools/pipeline-generator/Azure.Sdk.Tools.PipelineGenerator/Azure.Sdk.Tools.PipelineGenerator.csproj
+++ b/tools/pipeline-generator/Azure.Sdk.Tools.PipelineGenerator/Azure.Sdk.Tools.PipelineGenerator.csproj
@@ -8,6 +8,8 @@
     <ToolCommandName>pipeline-generator</ToolCommandName>
 
     <VersionPrefix>1.0.1</VersionPrefix>
+
+    <AssemblyName>Azure.Sdk.Tools.PipelineGenerator</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
