Make SourceDirectory a raw string

--- a/eng/pipelines/templates/scripts/verify-path-length.yml
+++ b/eng/pipelines/templates/scripts/verify-path-length.yml
@@ -13,7 +13,7 @@ steps:
         import os
         import sys
 
-        source_directory = "${{ parameters.SourceDirectory }}"
+        source_directory = r'${{ parameters.SourceDirectory }}'
         longest_file_path = ''
         longest_file_path_length = 0
         longest_dir_path = ''
