set notificaiton subscribing parallelism to 2 to avoid service unavailable errors (#182)

--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -12,6 +12,8 @@ stages:
   jobs:
   - job: Run
     strategy:
+      # Running all entries simultaneously causes "Service Unavailable" errors
+      maxParallel: 2
       matrix:
         NET:
           PathPrefix: 'net'
