--- a/src/dotnet/APIView/APIViewTest/APIViewTest.csproj
+++ b/src/dotnet/APIView/APIViewTest/APIViewTest.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -12,8 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ExactFormatting\*.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="1.0.0-preview.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -23,6 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\Azure.ClientSdk.Analyzers\Azure.ClientSdk.Analyzers.Tests\DiagnosticProject.cs" />
+    <EmbeddedResource Include="ExactFormatting\*.cs" />
     <ProjectReference Include="..\APIView\APIView.csproj" />
   </ItemGroup>
 
