--- a/src/dotnet/APIView/APIViewWeb/appsettings.json
+++ b/src/dotnet/APIView/APIViewWeb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "Github": {
-    "RequiredOrganization":  "Azure" 
-  } 
+    "RequiredOrganization": "Azure,Microsoft"
+  }
 }
