Add support for resolving comments (#221)

--- a/.gitignore
+++ b/.gitignore
@@ -471,3 +471,8 @@ local.settings.json
 # Java tooling
 *.iml
 
+# Typescript output
+src/dotnet/APIView/APIViewWeb/wwwroot/js/*.js*
+
+# npm
+*-lock.json
