--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -1,15 +1,5 @@
-# External variables:
-# ProjectFile - The project to build and test. This variable is defined in pipeline web ui because we want to be able to provide it at queue time and that isn't supported in yaml yet.
-# VersioningProps - A collection of extra msbuild versioning properties like OfficialBuildId, PreReleaseVersionLabel, and DotNetFinalVersionKind
-
 trigger:
   - master
-
-resources:
-  repositories:
-    - repository: azure-sdk-build-tools
-      type: git
-      name: internal/azure-sdk-build-tools
 
 variables:
   DotNetCoreVersion: '2.1.503'
@@ -48,18 +38,12 @@ stages:
               mavenPomFile: 'src/java/apiview-java-processor/pom.xml'
               goals: 'clean package'
 
-          - script: 'dotnet pack $(ProjectFile) -o $(Build.ArtifactStagingDirectory) -warnaserror $(VersioningProps)'
+          - script: 'dotnet pack $(ProjectFile) -o $(Build.ArtifactStagingDirectory) -warnaserror'
             displayName: 'Build and Package'
             env:
               DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
               DOTNET_CLI_TELEMETRY_OPTOUT: 1
               DOTNET_MULTILEVEL_LOOKUP: 0
-
-          - task: PublishBuildArtifacts@1
-            condition: succeededOrFailed()
-            displayName: 'Publish Artifacts'
-            inputs:
-              ArtifactName: packages
 
       - job: 'Test'
 
@@ -91,6 +75,3 @@ stages:
               testRunTitle: 'Windows DotNet $(DotNetCoreVersion)'
               testResultsFormat: 'VSTest'
               mergeTestResults: true
-
-  - ${{ if ne(variables['System.TeamProject'], 'Public') }}:
-    - template: pipelines/stages/net-release-blobfeed.yml@azure-sdk-build-tools
