Migrate to asp.net core 3.0 (#241)

--- a/src/dotnet/APIView/APIViewWeb/appsettings.json
+++ b/src/dotnet/APIView/APIViewWeb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "Github": {
-    "RequiredOrganization": "Azure,Microsoft"
+    "RequiredOrganization": [ "Azure", "Microsoft" ]
   }
 }
